# llm-structured-output-engine

./: .gitignore  CHANGELOG.md  README.md  TODO  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: .gitignore  mdx-components.jsx  next.config.mjs  package-lock.json  package.json
docs/app/: _meta.js  _meta.json  globals.css  layout.jsx  page.jsx
docs/app/docs/: _meta.js  layout.jsx  page.mdx
docs/app/support/: layout.jsx  page.mdx
docs/components/: AdapterLogo.jsx  LiquidEther.tsx  Logo.tsx  PixelBlast.tsx  Prism.tsx
examples/: basic_usage.py  prompt_persistence_example.py  prompt_template_example.py  run_with_openai.py  streaming_example.py  template_manager_example.py  template_manager_live_example.py
models/adapters/: openai_adapter.py
models/validators/: base_validator.py
src/adapters/: __init__.py  base_adapter.py  openai_adapter.py
src/enforcement/: engine.py
src/llm_structured_output_engine/: __init__.py
src/llm_structured_output_engine/cache/: memory.py
src/llm_structured_output_engine/core/: __init__.py  base.py  schemas.py
src/llm_structured_output_engine/enforcement/: engine.py  streaming_engine.py
src/llm_structured_output_engine/models/: __init__.py
src/llm_structured_output_engine/validators/: base_validator.py  json_validator.py
src/models/adapters/: openai_adapter.py
src/parsec/cache/: keys.py  memory.py
src/parsec/enforcement/: engine.py
src/parsec/prompts/: registry.py  template.py
src/parsec/training/: collector.py  (+1 more)
src/validators/: json_validator.py
tests/: conftest.py  pytest.ini  test_basic.py
(+26 files in other folders)
